# N-FERP

backend/: .env-example  Cargo.toml  cargo.toml  template-sample.json
backend/migrations/: 20230824040756_initial.sql
backend/src/: config.rs  main.rs  state.rs
backend/src/accounts/: accounts.rs  mod.rs  routes.rs
backend/src/middlewares/: auth.rs
backend/src/users/: dao.rs  mod.rs  routes.rs  users.rs
backend/tools/: acl_actions.sql  config.py  config.sql  create_admin.py  email_templates.sql  fields_meta_data.sql  load_initial_data.py  relationships.sql  requirements.txt  schedulers.sql  suite.sql  user_preferences.sql
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.js  test.js
frontend/src/: app.css  app.d.ts  app.html  hooks.server.js
frontend/src/lib/: api.js
frontend/src/routes/: +layout.server.js  +layout.svelte  +page.server.js  +page.svelte  Footer.svelte  Nav.svelte  Sidebar.svelte
frontend/src/routes/administration/: +page.svelte
frontend/src/routes/administration/role/: +page.server.js  +page.svelte
frontend/src/routes/administration/roles/: +page.svelte
frontend/src/routes/administration/user/: +page.server.js  +page.svelte
frontend/src/routes/administration/user/[id]/: +page.server.js  +page.svelte
frontend/src/routes/administration/user/edit/[id]/: +page.server.js  +page.svelte
frontend/src/routes/administration/users/: +page.server.js  +page.svelte
frontend/src/routes/dashboard/: +page.server.js  +page.svelte  link.svelte
frontend/src/routes/logout/: +page.server.js
frontend/static/: logo.xcf
