[package]
name = "ferp"
version = "0.0.1"
authors = ["Shiv Shankar Dayal <shivshankar.dayal@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://docs.rs/vergen/4.1.0/vergen/
[build-dependencies]
vergen = { version = "8.2.4", features = [ "git" ] }

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [ "runtime-actix-rustls", "macros", "chrono", "decimal", "uuid", "json", "time" ]

[dependencies]
ntex = { version = "0.7", features = ["glommio"] }
clap =  { version = "4.3.19", features = [ "derive" ] }
lettre = { version = "0.10.4", features = ["tokio1-native-tls", "hostname", "builder"] }
nonblock-logger = { version = "0.2.2", default-features = false, features = ["color", "dbg"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
chrono =  { version = "0.4.26", features = ["serde"] }
rust_decimal = { version = "1.31.0", features = [ "serde-float" ] }
validator = { version = "0.16.1", features = ["derive"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_qs = "0.12"
serde_json = "1.0.104"
json5 = "0.4.1"
rust-argon2 = "1.0.0"
hex = "0.4.3"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
futures = "0.3.28"
thiserror = "1.0.44"
anyhow = "1.0.72"
url = "2.4.0"
itsdangerous = "0.4.1"
num_cpus = "1.16.0"
cargo-watch = "8.4.0"
